name:                fb-haxl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/dp-cylme/fb-haxl#readme
license:             BSD3
license-file:        LICENSE
author:              Danil Petrov
maintainer:          dpetrov@cyl.me
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Facebook.Haxl
  other-modules:       Facebook.Haxl.DataSource
  build-depends:       base >= 4.7 && < 5
                     , resourcet
                     , conduit
                     , async
                     , aeson
                     , hashable >= 1.2
                     , fb
                     , haxl
                     , http-conduit
                     , http-client-tls
  default-language:    Haskell2010

executable fb-haxl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , time
                     , haxl
                     , fb
                     , fb-haxl
                     , text
                     , unordered-containers >= 0.2
                     , http-conduit
                     , http-client-tls
                     , vector
  default-language:    Haskell2010

test-suite fb-haxl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fb-haxl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dp-cylme/fb-haxl
