name:                fb-haxl
version:             0.1.0.0
synopsis:            facebook api client
description:         Please see README.md
homepage:            http://github.com/dp-cylme/fb-haxl#readme
license:             MIT
license-file:        LICENSE
author:              Danil Petrov
maintainer:          dpetrov@cyl.me
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Facebook.Haxl
  other-modules:       Facebook.Haxl.DataSource
  build-depends:       aeson
                     , async
                     , base >= 4.7 && < 5
                     , conduit
                     , fb
                     , hashable >= 1.2
                     , haxl
                     , http-client-tls
                     , http-conduit
                     , resourcet
  default-language:    Haskell2010

executable fb-haxl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , fb
                     , fb-haxl
                     , haxl
                     , http-client-tls
                     , http-conduit
                     , text
                     , time
                     , unordered-containers >= 0.2
                     , vector
  default-language:    Haskell2010

test-suite fb-haxl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fb-haxl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dp-cylme/fb-haxl
